<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.spoofsense.liveness.activities.GuidelinesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_header"
        android:fontFamily="@font/bold"
        android:text="@string/guidelines"
        android:textSize="@dimen/sp30" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/dp13"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semi_bold"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1_ample_lighting_on_the_face"
            android:textSize="@dimen/sp20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/guide_one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semi_bold"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_2_no_face_tilt"
            android:textSize="@dimen/sp20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/guide_two" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/semi_bold"
            android:text="@string/_3_no_multiple_faces"
            android:textSize="@dimen/sp20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/guide_three" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCheckLiveness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp50"
        android:text="@string/check_liveness" />

</LinearLayout>