<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.spoofsense.liveness.activities.SplashActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:src="@drawable/spoof_sense_logo"
        android:layout_width="@dimen/logo_dimen"
        android:layout_height="@dimen/logo_dimen"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_title_dimen"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spoof"
            android:fontFamily="@font/semi_bold"
            android:textSize="@dimen/sp28" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/semi_bold"
            android:text="@string/sense"
            android:textSize="@dimen/sp28" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        tools:text="face v1.0.8"
        android:layout_marginTop="@dimen/dp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:textSize="@dimen/sp24" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnCheckLiveness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp100"
        android:textColor="@color/button_text"
        android:text="@string/check_liveness"/>



</LinearLayout>